# callbot-py

./: .gitignore  README.md  example.config.yaml  pyproject.toml
src/callbot/: __about__.py  __init__.py  __main__.py  call_manager.py  caller.py  cli.py  contacts.py  db.py  exceptions.py  server.py  settings.py  types.py
src/callbot/auth/: algorithm.py  base_claims.py  base_jwt.py  base_payload.py  header.py  jwt.py  payload.py  public_claims.py  registered_claims.py
src/callbot/backends/: __init__.py  _elevenlabs.py  backend.py  openai.py  openai_elevenlabs.py
src/callbot/cli/: __init__.py  contacts.py  serve.py
src/callbot/functions/: __init__.py  _function.py  continue_waiting.py  hang_up.py
src/callbot/hooks/: __init__.py  after_call_end.py  after_call_start.py  after_function_call.py  before_conversation_start.py  before_function_call.py  before_startup.py  hook.py
src/callbot/misc/: generic_insight.py  logging.py  phone_number.py  singleton.py  util.py
src/callbot/schemas/: amd_status.py  contact.py
src/callbot/schemas/elevenlabs/: receive.py  send.py
src/callbot/schemas/openai_rt/: function.py  server_events.py
src/callbot/schemas/openai_rt/client_events/: __init__.py  conversation_item_create.py  conversation_item_truncate.py  input_audio_buffer_append.py  response_create.py  session.py  session_update.py
src/callbot/schemas/twilio_websocket_messages/inbound/: __init__.py  connected.py  error.py  interrupt.py  mark.py  media.py  prompt.py  setup.py  start.py  stop.py
src/callbot/schemas/twilio_websocket_messages/outbound/: __init__.py  clear.py  mark.py  media.py  text_tokens.py
src/callbot/settings/: __init__.py  _main.py  _section.py  _validators_types.py  db.py  elevenlabs.py  logging.py  misc.py  openai.py  plugins.py  server.py  twilio.py
